# Learning_Python

./: .gitignore
level1_(simple)/: main.py  student_data.py
level2_(OOP)/: books.json  main.py
level2_(OOP)/models/: manager.py
level2_(OOP)/utils/: io.py
level3_(data)/: main.ipynb
level3_(data)/data/: notes.txt  orders.csv  products.json
level4_(framework_API)/student_api_project/: Dockerfile  README.md  pyproject.toml
level4_(framework_API)/student_api_project/app/: main.py
level5_(end-project)/student-analytics/: docker-compose.yml
level5_(end-project)/student-analytics/backend/: Dockerfile  pyproject.toml
level5_(end-project)/student-analytics/backend/app/: analytics.py  crud.py  main.py  models.py  schemas.py
level5_(end-project)/student-analytics/frontend/: Dockerfile  package-lock.json  package.json
level5_(end-project)/student-analytics/frontend/.next/: app-build-manifest.json  trace
level5_(end-project)/student-analytics/frontend/.next/cache/: .rscinfo
level5_(end-project)/student-analytics/frontend/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
level5_(end-project)/student-analytics/frontend/.next/server/app/: page.js  page_client-reference-manifest.js
level5_(end-project)/student-analytics/frontend/app/: layout.tsx  page.tsx
level5_(end-project)/student-analytics/frontend/app/about/: page.tsx
level5_(end-project)/student-analytics/frontend/components/: Dashboard.js  Navbar.js  StudentForm.js  StudentTable.js
(+222 files in other folders)
